<resources>

    <string-array name="loan_types">
        <item>Equal Payment (Annuity)</item>
        <item>Equal Principal (Differentiated)</item>
    </string-array>
    <string-array name="interest_types">
        <item>Nominal</item>
        <item>Effective</item>
    </string-array>
    <string name="app_name">Quick Loan Calculator</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_term">Loan Term (Months)</string>
    <string name="loanInterest">Interest rate (%)</string>
    <string name="start_date">Start date</string>
    <string name="enter_loan_details">Select loan type</string>
    <string name="show_schedule">Schedule</string>
    <string name="monthly_payment">Monthly Payments:    %s</string>
    <string name="total_interest">Total Interest:   %s</string>
    <string name="total_loan_amount">Total Loan amount: %s</string>
    <string name="end_date">End date:   %s</string>
    <string name="calculate">Calculate</string>
    <string name="payment">Payment</string>
    <string name="principal">Principal</string>
    <string name="interest">Interest</string>
    <string name="balance">Balance</string>
    <string name="no">No</string>
    <string name="pay_date">Pay Date</string>
    <string name="TEST_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="apply_to_all_payments">Apply to all payments</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="start_payment_no">Start payment no.</string>
    <string name="end_payment_no">End payment no.</string>
    <string name="extra_payment_amount">Amount</string>
    <string name="enter_payment_range_or_apply_to_all">Specify extra payment range below to limit application of the extra payment then enter amount, or enter amount and select \'Apply to all\'  to add extra payment to all monthly payments.</string>
</resources>
